Fix sign up page formatting

--- a/breakconnect/static/breakconnect/css/reset-password.css
+++ b/breakconnect/static/breakconnect/css/reset-password.css
@@ -257,7 +257,7 @@
 }
 .reset-password .component-heade-sponsive-header-CkLYbh {
   background-color: transparent;
-  background-image: url(../img/base-5@1x.png);
+  background-image: url(../img/base-1@1x.png);
   background-position: 50% 50%;
   background-size: cover;
   height: 100%;
@@ -386,19 +386,19 @@ transform: scale(1.02);
   background-image: url(../img/monogram@1x.png);
   background-position: 50% 50%;
   background-size: cover;
-  height: 89.29%;
+  height: 100%;
   left: 0px;
-  position: absolute;
-  top: 7.14%;
-  width: 22.81%;
+  position: relative;
+  top: 0px;
+  width: 100%;
 }
 .reset-password .logo-type-dark-tHI9HX {
   background-color: transparent;
-  height: 28px;
+  bottom: calc(48.57% - 12px);
+  height: 25px;
   left: 16px;
   position: absolute;
-  top: calc(50.00% - 14px);
-  width: 114px;
+  width: 26px;
 }
 .reset-password .mask-toIDGu {
   background-color: transparent;
@@ -419,15 +419,6 @@ transform: scale(1.02);
   text-align: left;
   top: 16px;
   width: calc(100.00% - 71px);
-}
-.reset-password .rev-kit-WsgA5a {
-  background-color: transparent;
-  height: 82.14%;
-  left: 28.95%;
-  object-fit: cover;
-  position: absolute;
-  top: 3.57%;
-  width: 69.30%;
 }
 :root {
   --aqua-haze: rgba(235,244,248,1.0);
