--- a/breakconnect/templates/breakconnect/reset-password.html
+++ b/breakconnect/templates/breakconnect/reset-password.html
@@ -33,6 +33,14 @@
           format("opentype");
       }
 
+      @font-face {
+        font-family: "IBMPlexSans-SemiBold";
+        font-style: normal;
+        font-weight: 600;
+        src: url("https://anima-uploads.s3.amazonaws.com/5a7515b7cf6643000c1e724f/IBMPlexSans-SemiBold.ttf")
+          format("truetype");
+      }
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -213,7 +221,7 @@
                 <div class="icon-mxoZ1G">
                   <div class="icon-menu-pDsVjJ">
                     <img class="mask-toIDGu" src="{% static 'breakconnect/img/mask@1x.png' %}" />
-                    <img class="icon-menu-toIDGu" src="{% static 'breakconnect/img/icon-menu@1x.png'}" />
+                    <img class="icon-menu-toIDGu" src="{% static 'breakconnect/img/icon-menu@1x.png' %}" />
                   </div>
                 </div>
                 <div class="component-heade-global-nav-item-mxoZ1G">
@@ -223,7 +231,6 @@
             </div>
             <div class="logo-type-dark-tHI9HX">
               <div class="logo-type-dark-WsgA5a"></div>
-              <img class="rev-kit-WsgA5a" src="{% static 'breakconnect/img/revkit@1x.png' %}" />
             </div>
           </div>
         </div>
