--- a/breakconnect/templates/breakconnect/sign-in.html
+++ b/breakconnect/templates/breakconnect/sign-in.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="{% static 'breakconnect/css/sign-in.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'breakconnect/css/sign-in.css' %}" />
     <style>
       @font-face {
         font-family: "IBMPlexSans";
@@ -31,6 +31,14 @@
         font-weight: 700;
         src: url("https://anima-uploads.s3.amazonaws.com/5b10cd378c5114000d1e52a5/IBMPlexSans-Bold.otf")
           format("opentype");
+      }
+
+      @font-face {
+        font-family: "IBMPlexSans-SemiBold";
+        font-style: normal;
+        font-weight: 600;
+        src: url("https://anima-uploads.s3.amazonaws.com/5a7515b7cf6643000c1e724f/IBMPlexSans-SemiBold.ttf")
+          format("truetype");
       }
 
       .component-wrapper a,
@@ -276,7 +284,6 @@
             </div>
             <div class="logo-type-dark-tHI9HX">
               <div class="logo-type-dark-WsgA5a"></div>
-              <img class="rev-kit-WsgA5a" src="{% static 'breakconnect/img/revkit@1x.png' %}" />
             </div>
           </div>
         </div>
