--- a/breakconnect/templates/breakconnect/sign-up2.html
+++ b/breakconnect/templates/breakconnect/sign-up2.html
@@ -1,4 +1,4 @@
-}{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -213,7 +213,7 @@
     <input type="hidden" id="anPageName" name="page" value="sign-up" />
     <div class="container-center-horizontal">
       <div class="sign-up screen">
-        <img class="base-C61RwL" src="{% static 'breakconnect/img/base@1x.png' %}" />
+        <img class="base-C61RwL" src="{% static 'breakconnect/img/base-6@1x.png' %}" />
         <div class="component-heade-ive-header-copy-C61RwL">
           <div class="component-heade-sponsive-header-CkLYbh">
             <div class="component-heade-ponsive-trigger-tHI9HX">
@@ -236,10 +236,10 @@
         </div>
         <div class="component-form-place-sign-up-C61RwL">
           <div class="component-form-place-sign-up-xVcXBI">
-            <img class="base-x2VZAn" src="{% static 'breakconnect/img/base-22@1x.png' %}" />
+            <img class="base-x2VZAn" src="{% static 'breakconnect/img/base-8@1x.png' %}" />
             <div class="controls-button-x2VZAn smart-layers-pointers">
               <div class="controls-button-e-accent-normal-UC2Ss6">
-                <img class="base-qEpnVR" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
+                <img class="base-qEpnVR" src="{% static 'breakconnect/img/base-2@1x.png' %}" />
                 <div class="button-qEpnVR ibmplexsans-medium-aqua-haze-16px">Sign Up</div>
               </div>
             </div>
@@ -247,7 +247,7 @@
               <div class="controls-place-checkbox-ynI4os">
                 <div class="controls-checkbox-YqTEiH">
                   <div class="controls-checkbox-normal-lESxtH">
-                    <img class="base-pXuHzH" src="{% static 'breakconnect/img/base-24@1x.png' %}" />
+                    <img class="base-pXuHzH" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
                   </div>
                 </div>
                 <div class="controls-global-label-YqTEiH">
@@ -268,7 +268,7 @@
                 </div>
                 <div class="controls-text-field-EWz6jK">
                   <div class="controls-text-field-normal-2c5cad">
-                    <img class="base-DciiAQ" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
+                    <img class="base-DciiAQ" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
                     <div class="placeholder-DciiAQ ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                   </div>
                 </div>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="controls-text-field-MxyXZj">
                   <div class="controls-text-field-normal-x0C9nR">
-                    <img class="base-YRCzbi" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
+                    <img class="base-YRCzbi" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
                     <div class="placeholder-YRCzbi ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                   </div>
                 </div>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="controls-text-field-tQEa6u">
                   <div class="controls-text-field-normal-Fuexmj">
-                    <img class="base-Tz9YPA" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
+                    <img class="base-Tz9YPA" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
                     <div class="placeholder-Tz9YPA ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                   </div>
                 </div>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="controls-text-field-UN9AEV">
                   <div class="controls-text-field-normal-GNaKcM">
-                    <img class="base-KmtF20" src="{% static 'breakconnect/img/base-4@1x.png' %}" />
+                    <img class="base-KmtF20" src="{% static 'breakconnect/img/base-3@1x.png' %}" />
                     <div class="placeholder-KmtF20 ibmplexsans-normal-cerulean-frost-16px">&nbsp;</div>
                   </div>
                 </div>
